# CUDA_Compression

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
Python App/: app.py  main.py
Python App/assets/: style.qss
Python App/options_panel/comparison_widget/: __init__.py
Python App/options_panel/compression_widget/: algorithm_select.py  mode_select.py
Python App/system_monitor/: resource_worker.py  system_monitor_widget.py
data/: generate_test_txt.py
huffman_compression/compression/: GPU_kernels.cu  GPU_wrapper.cu  main_compress.cu  parallel_utilities.cu
huffman_compression/decompression/: main_decompress.c  serial_utilities.c  serial_utilities.h
python_app/: CUDA_app.py  algorithm_worker.py  app_main.py  button_menu.py  file_dialog_widget.py  graph_viewer.py
python_app/options_panel/: __init__.py  options_panel_widget.py
python_app/options_panel/comparison_widget/: __init__.py  comparison_checkbox.py  comparison_settings.py
python_app/options_panel/compression_widget/: __init__.py  compression_selectors_widget.py  hardware_select.py  mode_select.py
python_app/system_monitor/: emitting_stream.py  resource_worker.py  resources.py  system_monitor_widget.py  terminal_output_widget.py
src/compression/: main_compress.cu  parallel_utilities.h
src/cpu_algorithm/: huffman_cpu_compression.cpp  huffman_cpu_decompression.cpp
src/cpu_compression/: huffman_cpu_compression.cpp  huffman_cpu_decompression.cpp
src/decompression/: main_decompress.c  serial_utilities.c  serial_utilities.h
src/gpu_algorithm/compression/: GPU_kernels.cu  GPU_wrapper.cu  compress.cu  gpu_wrapper.cu  kernels.cu  parallel.cu  parallel_utilities.cu  parallel_utilities.h
src/gpu_algorithm/decompression/: main_decompress.c  serial_utilities.c  serial_utilities.h
